--- a/Python_Essentials_for_MLOps/project01/project1_notebook.ipynb
+++ b/Python_Essentials_for_MLOps/project01/project1_notebook.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "source": [
     "import logging\r\n",
     "\r\n",
@@ -44,50 +44,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "source": [
     "import pandas as pd\r\n",
     "from IPython.display import display\r\n",
     "\r\n",
-    "def read_file(link):\r\n",
+    "def read_csv_file(file_path: str) -> pd.DataFrame:\r\n",
     "    '''\r\n",
-    "    This function aims to read a csv file\r\n",
+    "    Reads a CSV file and returns its content as a pandas DataFrame.\r\n",
+    "\r\n",
+    "    Args:\r\n",
+    "        file_path (str): Path to the CSV file.\r\n",
+    "\r\n",
+    "    Returns:\r\n",
+    "        pd.DataFrame or None: A pandas DataFrame containing the data \r\n",
+    "        from the CSV file, or None if the file is not found.\r\n",
     "    '''\r\n",
     "    try:\r\n",
-    "        data = pd.read_csv(link)\r\n",
-    "        logging.info('✅ Data loaded successfully!')\r\n",
+    "        data = pd.read_csv(file_path)\r\n",
+    "        logging.info('✅ Data loaded successfully from file: %s', file_path)\r\n",
     "        return data\r\n",
     "    except FileNotFoundError:\r\n",
-    "        logging.error('❌ File not found.')\r\n",
+    "        logging.error('❌ File not found at path: %s', file_path)\r\n",
     "        return None\r\n",
     "\r\n",
-    "def show_file(data):\r\n",
+    "def display_dataframe(data: pd.DataFrame) -> None:\r\n",
     "    '''\r\n",
-    "    This function aims to show the first 5 lines of a Pandas dataframe\r\n",
+    "    Displays the first 5 rows of a Pandas DataFrame.\r\n",
+    "\r\n",
+    "    Args:\r\n",
+    "        data (pd.DataFrame): The DataFrame to be displayed.\r\n",
+    "\r\n",
+    "    Returns:\r\n",
+    "        None\r\n",
     "    '''\r\n",
     "    try:\r\n",
-    "        display(data.head())\r\n",
-    "    except AttributeError:\r\n",
-    "        logging.error('❌ It was not possible to show this file.')\r\n",
+    "        if isinstance(data, pd.DataFrame):\r\n",
+    "            display(data.head())\r\n",
+    "        else:\r\n",
+    "            raise ValueError('❌ Invalid input: Not a Pandas DataFrame')\r\n",
+    "    except ValueError as error:\r\n",
+    "        logging.error(error)\r\n",
     "\r\n",
-    "def show_types(data):\r\n",
+    "def column_types(data: pd.DataFrame) -> None:\r\n",
     "    '''\r\n",
-    "    This function aims to show the types of the columns of a dataframe\r\n",
+    "    Displays the data types of columns in a Pandas DataFrame.\r\n",
+    "\r\n",
+    "    Args:\r\n",
+    "        data (pd.DataFrame): The DataFrame for which column types are to be displayed.\r\n",
+    "\r\n",
+    "    Returns:\r\n",
+    "        None\r\n",
     "    '''\r\n",
     "    try:\r\n",
-    "        display(data.dtypes)\r\n",
-    "    except AttributeError:\r\n",
-    "        logging.error('❌ It was not possible to show the types of this file.')\r\n",
+    "        if isinstance(data, pd.DataFrame):\r\n",
+    "            display(data.dtypes)\r\n",
+    "        else:\r\n",
+    "            raise ValueError('❌ Invalid input: Not a Pandas DataFrame')\r\n",
+    "    except ValueError as error:\r\n",
+    "        logging.error(error)\r\n",
     "\r\n",
-    "movies = read_file(\"files/movies.csv\")\r\n",
-    "show_file(movies)"
+    "# Load movies data from CSV file\r\n",
+    "movies = read_csv_file(\"files/movies.csv\")\r\n",
+    "display_dataframe(movies)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "INFO:root:✅ Data loaded successfully!\n"
+      "INFO:root:✅ Data loaded successfully from file: files/movies.csv\n"
      ]
     },
     {
@@ -175,19 +201,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "source": [
     "import re\r\n",
     "\r\n",
-    "def clean_title(title):\r\n",
+    "def clean_title(title: str) -> str:\r\n",
     "    '''\r\n",
-    "    This function removes special characters from a string, retaining only letters, numbers, and white spaces.\r\n",
-    "    '''\r\n",
-    "    title = re.sub(\"[^a-zA-Z0-9 ]\", \"\", title)\r\n",
-    "    return title\r\n",
+    "    Removes special characters from a string, retaining only letters, numbers, and white spaces.\r\n",
     "\r\n",
+    "    Args:\r\n",
+    "        title (str): The input string containing special characters.\r\n",
+    "\r\n",
+    "    Returns:\r\n",
+    "        str: The cleaned string without special characters.\r\n",
+    "    '''\r\n",
+    "    cleaned_title = re.sub(r\"[^a-zA-Z0-9 ]\", \"\", title)\r\n",
+    "    return cleaned_title\r\n",
+    "\r\n",
+    "# Clean movie titles and display the updated dataframe\r\n",
     "movies[\"clean_title\"] = movies[\"title\"].apply(clean_title)\r\n",
-    "show_file(movies)"
+    "display_dataframe(movies)"
    ],
    "outputs": [
     {
@@ -288,14 +321,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\r\n",
     "\r\n",
-    "# Creates an TfidfVectorizer instance\r\n",
-    "vectorizer = TfidfVectorizer(ngram_range=(1,2))\r\n",
-    "# Numeric representation of movie title based\r\n",
-    "# on words frequency and bigrams\r\n",
+    "# Initialize TfidfVectorizer for movie titles\r\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1, 2))\r\n",
     "tfidf = vectorizer.fit_transform(movies[\"clean_title\"])"
    ],
    "outputs": [],
@@ -303,22 +334,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\r\n",
     "import numpy as np\r\n",
     "\r\n",
-    "def search_similar_movies_title(title, data):\r\n",
+    "def search_similar_movies_title(title: str, data: pd.DataFrame, vectorizer, tfidf) -> pd.DataFrame:\r\n",
     "    '''\r\n",
-    "    This function returns the movies most similar to \r\n",
-    "    the provided movie based on its title. \r\n",
+    "    Returns movies most similar to the provided movie based on its title.\r\n",
+    "\r\n",
+    "    Args:\r\n",
+    "        title (str): The movie title to search for.\r\n",
+    "        data (pd.DataFrame): The DataFrame containing movie data.\r\n",
+    "        vectorizer: The vectorizer used to transform movie titles into vectors.\r\n",
+    "        tfidf: The TF-IDF vectorizer used for movie title similarity calculation.\r\n",
+    "\r\n",
+    "    Returns:\r\n",
+    "        pd.DataFrame: DataFrame containing movies most similar to the provided title.\r\n",
     "    '''\r\n",
-    "    title = clean_title(title)\r\n",
-    "    query_vec = vectorizer.transform([title]) # Transforms the title in a vector \r\n",
-    "    similarity = cosine_similarity(query_vec, tfidf).flatten() # Calculares cosine similarity \r\n",
-    "    indices = np.argpartition(similarity, -5)[-5:] # Takes the 5 more similar movies\r\n",
-    "    results = data.iloc[indices].iloc[::-1] # Most similar movies in the top\r\n",
-    "    \r\n",
+    "    cleaned_title = clean_title(title)\r\n",
+    "    query_vec = vectorizer.transform([cleaned_title])\r\n",
+    "    similarity = cosine_similarity(query_vec, tfidf).flatten()\r\n",
+    "    indices = np.argpartition(similarity, -5)[-5:]\r\n",
+    "    results = data.iloc[indices].iloc[::-1]\r\n",
     "    return results"
    ],
    "outputs": [],
@@ -326,39 +364,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "source": [
     "import ipywidgets as widgets\r\n",
     "from IPython.display import display\r\n",
     "\r\n",
-    "# Defines the movie input to search to similar movies\r\n",
-    "movie_input = widgets.Text(\r\n",
-    "    value='Toy Story',\r\n",
-    "    description='Movie Title:',\r\n",
-    "    disabled=False\r\n",
-    ")\r\n",
-    "\r\n",
-    "# List with 5 most similar movies\r\n",
+    "# Define widgets for user input\r\n",
+    "movie_input = widgets.Text(value='Toy Story', description='Movie Title:', disabled=False)\r\n",
     "movie_list = widgets.Output()\r\n",
     "\r\n",
     "def on_type_title(data):\r\n",
     "    '''\r\n",
-    "    This function is a callback called every time the movie_input \r\n",
-    "    changes. When this happens, the movie_list will be cleared, and \r\n",
-    "    if the title has more than 5 characters, it will search the \r\n",
-    "    most similar movies according to its title\r\n",
+    "    Callback function called every time the movie_input changes. \r\n",
+    "    Clears movie_list and searches for similar movies when the title \r\n",
+    "    has more than 5 characters.\r\n",
     "    '''\r\n",
     "    with movie_list:\r\n",
     "        movie_list.clear_output()\r\n",
     "        title = data[\"new\"]\r\n",
     "        if len(title) > 5:\r\n",
-    "            display(search_similar_movies_title(title, movies))\r\n",
+    "            display(search_similar_movies_title(title, movies, vectorizer, tfidf))\r\n",
     "        else:\r\n",
     "            logging.info('ℹ️ Enter at least 6 characters to search for similar movies!')\r\n",
     "\r\n",
-    "# Automatically calls on_type_title when movie_input changes\r\n",
     "movie_input.observe(on_type_title, names='value')\r\n",
-    "# Display the movie and its similar ones\r\n",
     "display(movie_input, movie_list)"
    ],
    "outputs": [
@@ -368,7 +397,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "960c11363cab4b94848aa69337450269"
+       "model_id": "8ced59be9903434caf5beebc3ebcd120"
       },
       "text/plain": [
        "Text(value='Toy Story', description='Movie Title:')"
@@ -382,7 +411,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d25be8450a7449f891399fe4f3595023"
+       "model_id": "5052c72396f943659a55cfa26324c938"
       },
       "text/plain": [
        "Output()"
@@ -402,24 +431,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "source": [
     "class NoDataFiltered(Exception):\r\n",
     "    '''\r\n",
     "    Raised when there is no search when applying a filter \r\n",
     "    '''\r\n",
     "\r\n",
-    "def filter_movie_by_id(movie_id, data):\r\n",
+    "def filter_movie_by_id(movie_id: int, data: pd.DataFrame) -> pd.DataFrame:\r\n",
     "    '''\r\n",
-    "    This function searchs a movie by its id\r\n",
+    "    Filters a movie by its ID in the provided DataFrame.\r\n",
+    "\r\n",
+    "    Args:\r\n",
+    "        movie_id (int): The ID of the movie to search for.\r\n",
+    "        data (pd.DataFrame): The DataFrame containing movie data.\r\n",
+    "\r\n",
+    "    Returns:\r\n",
+    "        pd.DataFrame or None: DataFrame containing the filtered movie, or None if no movie is found.\r\n",
     "    '''\r\n",
     "    try:\r\n",
-    "        movie = data[data[\"movieId\"] == movie_id]\r\n",
-    "        if len(movie) == 0:\r\n",
+    "        filtered_movie = data[data[\"movieId\"] == movie_id]\r\n",
+    "        if len(filtered_movie) == 0:\r\n",
     "            raise NoDataFiltered('❌ There isn\\'t any movie with this ID.')\r\n",
-    "        return movie\r\n",
+    "        return filtered_movie\r\n",
     "    except NoDataFiltered as error:\r\n",
-    "        print(error)\r\n",
+    "        logging.error(error)\r\n",
     "        return None"
    ],
    "outputs": [],
@@ -427,18 +463,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "source": [
-    "ratings = read_file(\"files/ratings.csv\")\r\n",
-    "show_file(ratings)\r\n",
-    "show_types(ratings)"
+    "# Load ratings data from CSV file and display it\r\n",
+    "ratings = read_csv_file(\"files/ratings.csv\")\r\n",
+    "display_dataframe(ratings)\r\n",
+    "column_types(ratings)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "INFO:root:✅ Data loaded successfully!\n"
+      "INFO:root:✅ Data loaded successfully from file: files/ratings.csv\n"
      ]
     },
     {
@@ -538,20 +575,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "source": [
-    "def search_similar_movies_ratings(movie_id):\r\n",
+    "def search_similar_movies_ratings(movie_id: int, ratings: pd.DataFrame,\r\n",
+    "                                  movies: pd.DataFrame) -> pd.DataFrame:\r\n",
     "    '''\r\n",
-    "    This function searches for similar movies based on users ratings\r\n",
+    "    Searches for similar movies based on users ratings.\r\n",
+    "\r\n",
+    "    Args:\r\n",
+    "        movie_id (int): The ID of the movie to search for similar movies.\r\n",
+    "        ratings (pd.DataFrame): DataFrame containing users' movie ratings.\r\n",
+    "        movies (pd.DataFrame): DataFrame containing movie information.\r\n",
+    "\r\n",
+    "    Returns:\r\n",
+    "        pd.DataFrame: DataFrame containing top recommendations similar to the provided movie.\r\n",
     "    '''\r\n",
-    "    \r\n",
     "    # Find users who rated the movie with the specified ID and rated it higher than 4\r\n",
-    "    query=(ratings[\"movieId\"] == movie_id) & (ratings[\"rating\"] > 4)\r\n",
-    "    similar_users = ratings[query][\"userId\"].unique()\r\n",
+    "    similar_users = ratings[(ratings[\"movieId\"] == movie_id)\r\n",
+    "                            & (ratings[\"rating\"] > 4)][\"userId\"].unique()\r\n",
     "\r\n",
     "    # Filter the movie ratings made by similar users and a rating higher than 4\r\n",
-    "    query=(ratings[\"userId\"].isin(similar_users)) & (ratings[\"rating\"] > 4)\r\n",
-    "    similar_user_recs = ratings[query][\"movieId\"]\r\n",
+    "    similar_user_recs = ratings[(ratings[\"userId\"].isin(similar_users))\r\n",
+    "                                & (ratings[\"rating\"] > 4)][\"movieId\"]\r\n",
     "\r\n",
     "    # Calculate the recommendation percentage for each movie based on ratings from similar users\r\n",
     "    similar_user_recs = similar_user_recs.value_counts() / len(similar_users)\r\n",
@@ -559,29 +604,33 @@
     "    # Filter movies with a recommendation percentage greater than 10%\r\n",
     "    similar_user_recs = similar_user_recs[similar_user_recs > .10]\r\n",
     "\r\n",
-    "    # Filter all movie ratings made by similar users and calculates its recommendation percentage\r\n",
-    "    query=(ratings[\"movieId\"].isin(similar_user_recs.index)) & (ratings[\"rating\"] > 4)\r\n",
-    "    all_users = ratings[query]\r\n",
+    "    # Filter all movie ratings made by similar users\r\n",
+    "    # and calculates its recommendation percentage\r\n",
+    "    all_users = ratings[(ratings[\"movieId\"].isin(similar_user_recs.index))\r\n",
+    "                        & (ratings[\"rating\"] > 4)]\r\n",
     "    all_user_recs = all_users[\"movieId\"].value_counts() / len(all_users[\"userId\"].unique())\r\n",
     "\r\n",
     "    # Concatenate the recommendation percentages from similar users and all users\r\n",
     "    rec_percentages = pd.concat([similar_user_recs, all_user_recs], axis=1)\r\n",
     "    rec_percentages.columns = [\"similar\", \"all\"]\r\n",
     "\r\n",
-    "    # Calculate the score as the ratio of recommendation percentages from\r\n",
-    "    # similar users and all users\r\n",
+    "    # Calculate the score as the ratio of recommendation\r\n",
+    "    # percentages from similar users and all users\r\n",
     "    rec_percentages[\"score\"] = rec_percentages[\"similar\"] / rec_percentages[\"all\"]\r\n",
     "    rec_percentages = rec_percentages.sort_values(\"score\", ascending=False)\r\n",
     "\r\n",
     "    # Return the top 10 recommendations\r\n",
-    "    cols=[\"score\", \"title\", \"genres\"]\r\n",
+    "    cols = [\"score\", \"title\", \"genres\"]\r\n",
     "    results = rec_percentages.head(10).merge(movies, left_index=True, right_on=\"movieId\")[cols]\r\n",
     "    return results\r\n",
     "\r\n",
+    "# Filter movie by ID and display it\r\n",
     "movie_id = 89745\r\n",
-    "movie=filter_movie_by_id(movie_id, movies)\r\n",
+    "movie = filter_movie_by_id(movie_id, movies)\r\n",
     "display(movie)\r\n",
-    "similar_movies = search_similar_movies_ratings(movie_id)\r\n",
+    "\r\n",
+    "# Find similar movies for the filtered movie and display recommendations\r\n",
+    "similar_movies = search_similar_movies_ratings(movie_id, ratings, movies)\r\n",
     "display(similar_movies)"
    ],
    "outputs": [
@@ -765,30 +814,23 @@
     "import ipywidgets as widgets\r\n",
     "from IPython.display import display\r\n",
     "\r\n",
-    "# Defines the movie input to search to similar movies\r\n",
-    "movie_name_input = widgets.Text(\r\n",
-    "    value='Toy Story',\r\n",
-    "    description='Movie Title:',\r\n",
-    "    disabled=False\r\n",
-    ")\r\n",
-    "\r\n",
-    "# List with 10 movies to recommend\r\n",
+    "# Define widgets for recommending movies based on user input\r\n",
+    "movie_name_input = widgets.Text(value='Toy Story', description='Movie Title:', disabled=False)\r\n",
     "recommendation_list = widgets.Output()\r\n",
     "\r\n",
     "def on_type_rec(data):\r\n",
     "    '''\r\n",
-    "    This function is a callback called every time the movie_input \r\n",
-    "    changes. When this happens, the recommendation_list will be \r\n",
-    "    cleared, and if the title has more than 5 characters, it will \r\n",
-    "    search 10 movies to recommend\r\n",
+    "    Callback function called every time the movie_name_input changes. \r\n",
+    "    Clears recommendation_list and searches for movie recommendations \r\n",
+    "    when the title has more than 5 characters.\r\n",
     "    '''\r\n",
     "    with recommendation_list:\r\n",
     "        recommendation_list.clear_output()\r\n",
     "        title = data[\"new\"]\r\n",
     "        if len(title) > 5:\r\n",
-    "            results = search_similar_movies_title(title, movies)\r\n",
+    "            results = search_similar_movies_title(title, movies, vectorizer, tfidf)\r\n",
     "            movie_id = results.iloc[0][\"movieId\"]\r\n",
-    "            display(search_similar_movies_ratings(movie_id))\r\n",
+    "            display(search_similar_movies_ratings(movie_id, ratings, movies))\r\n",
     "        else:\r\n",
     "            logging.info('ℹ️ Enter at least 6 characters to search for similar movies!')\r\n",
     "\r\n",
